--- a/imgui.ini
+++ b/imgui.ini
@@ -14,12 +14,17 @@ Size=345,180
 Collapsed=0
 
 [Window][Camera info]
-Pos=12,6
-Size=287,71
-Collapsed=0
+Pos=19,17
+Size=291,198
+Collapsed=1
 
 [Window][Hello window]
 Pos=-47,581
 Size=418,228
+Collapsed=0
+
+[Window][Spot light]
+Pos=55,45
+Size=608,158
 Collapsed=0
 
